--- a/Specialized-Adoption-Agency.html
+++ b/Specialized-Adoption-Agency.html
@@ -24,6 +24,7 @@
     rel="stylesheet">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .top_header {
       background-color: rgba(0.4, 0.4, 0.5, 0.4);
@@ -123,10 +124,10 @@
         <div class="row">
           <div class="col-md-6 d-flex align-items-center">
             <div>
-              <div class="sec_titles">
+              <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                 <h3> Specialized Adoption Agency ( SAA ) <span></span></h3>
               </div>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 SAA is an institution established by the State Government or by a Voluntary or non-Governmental
                 organization and recognised under section 65, for housing orphans, abandoned and surrendered
                 children, placed there by order of the Committee, for the purpose of adoption. It is strictly following
@@ -138,10 +139,10 @@
                 them in good families.
               </p>
               <div class="mt-4">
-                <h5>
+                <h5 data-aos="fade-up" data-aos-duration="3000">
                   Contact Us 
                  </h5>
-                 <a href="tel:+9196121 17652" class="contactLink">
+                 <a href="tel:+9196121 17652" class="contactLink" data-aos="fade-up" data-aos-duration="3000">
                    <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                     <span class="contactIcon d-inline-flex justify-content-center align-items-center">
                       <i class="fa fa-phone"></i>
@@ -152,11 +153,11 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/images/certificate.jpg" alt="certificate" class="img-fluid">
+            <img src="./assets/images/certificate.jpg" alt="certificate" class="img-fluid" data-aos="fade-up" data-aos-duration="3000">
           </div>
           <div class="col-md-6 mt-5">
-            <div>
-              <img src="./assets/images/TQYk3e.jpg" alt="img">
+            <div data-aos="fade-up" data-aos-duration="3000">
+              <img src="./assets/images/TQYk3e.png" alt="img" class="img-fluid w-100">
               <address>
                 <h3>Specialized Adoption Agency</h3>
                 <h5>Address :</h5>
@@ -172,7 +173,7 @@
           </div>
           <div class="col-md-6 mt-5 d-flex align-items-center">
             <div>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 Nani Maria Society will support State and NGO run Specialized Adoption Agency (SAA) where adoptable
                 children are provided residential care. The SAA must be registered under the appropriate provisions of
                 the Juvenile Justice ( Care and Protection Children ) Act , 2015 and follow the Adoption Regulation
@@ -188,12 +189,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
               <h3>Children registered till now in our NGO. <span></span></h3>
             </div>
           </div>
           <div class="col-md-12 mt-4">
-            <div class="table-responsive">
+            <div class="table-responsive" data-aos="fade-up" data-aos-duration="3000">
               <table class="table table-striped">
                 <thead class="school_table_head">
                   <tr>
@@ -266,12 +267,12 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center mt-5">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
               <h3>Prospective Adoptive Parents (PAPS) Registered <span></span></h3>
             </div>
           </div>
           <div class="col-md-12 mt-4">
-            <div class="table-responsive">
+            <div class="table-responsive" data-aos="fade-up" data-aos-duration="3000">
               <table class="table table-striped">
                 <thead class="school_table_head">
                   <tr>
@@ -320,10 +321,10 @@
           <div class="col-md-6 d-flex align-items-center">
             <div>
               <div class="col-md-12">
-                <div class="sec_titles">
+                <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                   <h3>Child Rescued<span></span></h3>
                 </div>
-                <p>
+                <p data-aos="fade-up" data-aos-duration="3000">
                   A three days infant, who was sold by his biological father rescued with the help of Childline
                   and Police team from Shantipur. After Medical checkup suggested that child in good health,
                   Child Welfare Committee order child have been placed to SAA, Roing.
@@ -333,7 +334,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/images/slider4.jpg" alt="img" class="img-fluid">
+            <img src="./assets/images/slider4.jpg" alt="img" class="img-fluid" data-aos="fade-up" data-aos-duration="3000">
           </div>
         </div>
     </section>
@@ -346,10 +347,10 @@
           <div class="col-md-6 d-flex align-items-center order-md-2 order-1">
             <div>
               <div class="col-md-12 order-md-2 order-1">
-                <div class="sec_titles">
+                <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                   <h3>Abandoned Child<span></span></h3>
                 </div>
-                <p>
+                <p data-aos="fade-up" data-aos-duration="3000">
                   Nine months abandoned child name Veer,
  DOB- 17/08/2020 
 (Received Date)
@@ -372,17 +373,17 @@ Biological parents.
           <div class="col-md-6 d-flex align-items-center">
             <div>
               <div class="col-md-12">
-                <div class="sec_titles">
+                <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                   <h3>Surrendered Child<span></span></h3>
                 </div>
-                <p>
+                <p data-aos="fade-up" data-aos-duration="3000">
                   On 2nd December,2022 five days infant received from District Child Protection Officer and Protection Officer Namsai. The child birth is related to POCSO (Protection of Children from Sexual Offence) case and minor age. For being a minor and school going girl, her biological mother and guardian surrendered the said child due to inability to keep the child.
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/images/slider6.jpg" alt="img" class="img-fluid">
+            <img src="./assets/images/slider6.jpg" alt="img" class="img-fluid" data-aos="fade-up" data-aos-duration="3000">
           </div>
         </div>
     </section>
@@ -390,21 +391,21 @@ Biological parents.
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <div class="sec_titles sec_titles-head mb-4">
+            <div class="sec_titles sec_titles-head mb-4" data-aos="fade-up" data-aos-duration="3000">
               <img src="./assets/images/adoption.png" alt="img" class="Y_floating">
               <h3 class="italic">Adoption Is Blessing</h3>
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/images/LqEbYV.jpg" alt="img" class="img-fluid">
+            <img src="./assets/images/LqEbYV.jpg" alt="img" class="img-fluid" data-aos="fade-up" data-aos-duration="3000">
           </div>
           <div class="col-md-6 d-flex align-items-center">
             <div>
               <div class="col-md-12">
-                <div class="sec_titles">
+                <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                   <h3>First Adoption from SAA, Roing<span></span></h3>
                 </div>
-                <p>
+                <p data-aos="fade-up" data-aos-duration="3000">
                   On 14th April 2022 First adoption from SAA, Roing child 
                   name Master Shine who was rescued from Shantipur. The child has 
                   been reserved by Prospective Adoptive Parents from Kolkata
@@ -420,17 +421,17 @@ Biological parents.
           <div class="col-md-6 d-flex align-items-center">
             <div>
               <div class="col-md-12">
-                <div class="sec_titles">
+                <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                   <h3>Second  Adoption from SAA, Roing<span></span></h3>
                 </div>
-                <p>
+                <p data-aos="fade-up" data-aos-duration="3000">
                   Orphan Girl aged about 12 years old. Adoption Order issued in favor of the Prospective Adoptive Parents from Kerala.
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/images/slider5.jpg" alt="img" class="img-fluid">
+            <img src="./assets/images/slider5.jpg" alt="img" class="img-fluid" data-aos="fade-up" data-aos-duration="3000">
           </div>
         </div>
     </section>
@@ -438,15 +439,15 @@ Biological parents.
       <div class="container">
         <div class="row">
           <div class="col-md-6 order-md-1 order-2">
-            <img src="./assets/images/mOpqFH.jpg" alt="img" class="img-fluid">
+            <img src="./assets/images/mOpqFH.jpg" alt="img" class="img-fluid" data-aos="fade-up" data-aos-duration="3000">
           </div>
           <div class="col-md-6 d-flex align-items-center order-md-2 order-1">
             <div>
               <div class="col-md-12">
-                <div class="sec_titles">
+                <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                   <h3>Third Adoption From SAA, Roing<span></span></h3>
                 </div>
-                <p>
+                <p data-aos="fade-up" data-aos-duration="3000">
                   Surrendered boy child to his Prospective
 						 	Adoptive Parents from Tamil Nadu.
                 </p>
@@ -461,10 +462,10 @@ Biological parents.
           <div class="col-md-6 d-flex align-items-center">
             <div>
               <div class="col-md-12">
-                <div class="sec_titles">
+                <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                   <h3>Forth Adoption From SAA, Roing<span></span></h3>
                 </div>
-                <p>
+                <p data-aos="fade-up" data-aos-duration="3000">
                   Surrendered Infant Girl Child to her Prospective
                   Adoptive Parents from Bangalore.
                 </p>
@@ -472,7 +473,7 @@ Biological parents.
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/images/slider2.jpg" alt="img" class="img-fluid">
+            <img src="./assets/images/slider2.jpg" alt="img" class="img-fluid" data-aos="fade-up" data-aos-duration="3000">
           </div>
         </div>
     </section>
@@ -480,15 +481,15 @@ Biological parents.
       <div class="container">
         <div class="row">
           <div class="col-md-6 order-md-1 order-2">
-            <img src="./assets/images/slider3.jpg" alt="img" class="img-fluid">
+            <img src="./assets/images/slider3.jpg" alt="img" class="img-fluid" data-aos="fade-up" data-aos-duration="3000">
           </div>
           <div class="col-md-6 d-flex align-items-center order-md-2 order-1">
             <div>
               <div class="col-md-12">
-                <div class="sec_titles">
+                <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                   <h3>Fifth Adoption<span></span></h3>
                 </div>
-                <p>
+                <p data-aos="fade-up" data-aos-duration="3000">
                   Inter-country Adoption of Boy Child . Handed over to the Prospective Adoptive Parents from Italy.
                 </p>
               </div>
@@ -497,12 +498,12 @@ Biological parents.
         </div>
         <div class="row">
           <div class="col-md-12 text-center mt-5">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
               <h3>Status of Children Registered till now<span></span></h3>
             </div>
           </div>
           <div class="col-md-12 mt-4">
-            <div class="table-responsive">
+            <div class="table-responsive" data-aos="fade-up" data-aos-duration="3000">
               <table class="table table-striped">
                 <thead class="school_table_head">
                   <tr>
@@ -648,6 +649,10 @@ Biological parents.
   <script src="./assets/js/owl.carousel.js"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
   <script src="./assets/js/main.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
