--- a/about-us.html
+++ b/about-us.html
@@ -18,6 +18,7 @@
     rel="stylesheet">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -83,8 +84,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h3>A FEW WORDS</h3>
-            <h1>About Us</h1>
+            <h3 data-aos="fade-up" data-aos-duration="1500">A FEW WORDS</h3>
+            <h1 data-aos="fade-up" data-aos-duration="2000">About Us</h1>
           </div>
         </div>
       </div>
@@ -93,7 +94,10 @@
       <div class="container bg-white p-4">
         <div class="row">
           <div class="col-md-12">
-            <p>
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="1500">
+              <h3> About Us<span></span></h3>
+            </div>
+            <p data-aos="fade-up" data-aos-duration="1500">
               NANI MARIA SOCIETY is an NGO founded by Smt. Desai Linggi, in the year 2002 based at Cheta-II Roing, Lower
               Dibang Valley Arunachal Pradesh, India. Nani Maria Society was formed to support and assist women and
               children of marginalized tribal communities and areas in the eastern region of the state, Arunachal
@@ -103,13 +107,13 @@
             </p>
           </div>
           <div class="col-md-12">
-            <p>
+            <p data-aos="fade-up" data-aos-duration="2000">
               NMS has been implementing and extending various programs for the cause, through campaigning community
               awareness, need based vocational training, rehabilitation service for orphan and distressed women
               irrespective of caste creed or religion. Under this program, the NMCH undertakes to identify children
               victimized by Child Labor, human trafficking, and Child marriage.
             </p>
-            <p>
+            <p data-aos="fade-up" data-aos-duration="3000">
 
               NMCH also identifies children that are orphans, abandoned, runaways, mentally & physically challenged,
               children diagnosed with autisms: slow learner and juvenile rape victims: to which/whom the institute
@@ -117,19 +121,19 @@
               programs such as Vocational training, Awareness programs to build their confidence, self-reliance,
               self-sustainability for which the NMS generates funds from the Public and governmental assistance.
             </p>
-            <p>
+            <p data-aos="fade-up" data-aos-duration="3500">
               In view of the socio-cultural ethos of the communities present in the district and region, NMS aims to the
               upliftment of women and children in poor tribal areas and to make them independent, self-reliant and
               self-sustainable. The NMS society mostly focuses on the development of women and children by finding out
               needy and helpless families and extending every possible help to them. To lessen & fight various societal
               subjugations, the NMS conducts awareness programs at villages and schools in remote areas of the region.
             </p>
-            <p>
+            <p data-aos="fade-up" data-aos-duration="4000">
               The society also provides legal literacy & aid to women & children in need. The NMS from time to time also
               organizes health camps and provides basic treatments to tribal women & children in their native villages
               which help them to have a better understanding of personal health care, hygiene and basic aids.
             </p>
-            <p>
+            <p data-aos="fade-up" data-aos-duration="4200">
               The NMS also solemnly aims to preserve the precious healthy culture and traditional beliefs of the tribes
               of Arunachal Pradesh while creating awareness against the wrong habit and blind beliefs prevailing in the
               society. With envisioning a society where Women & Children are equally respected and accounted for, the
@@ -259,6 +263,10 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="./assets/js/index.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
