--- a/after-care.html
+++ b/after-care.html
@@ -24,6 +24,7 @@
     rel="stylesheet">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .top_header {
       background-color: rgba(0.4, 0.4, 0.5, 0.4);
@@ -98,7 +99,7 @@
         <div class="container">
            <div class="row">
                <div class="col-md-12">
-                   <h1>After Care</h1>
+                   <h1 data-aos="fade-up" data-aos-duration="1500">After Care</h1>
                </div>
            </div>
         </div>
@@ -108,19 +109,22 @@
         <div class="row">
           <div class="col-md-6 d-flex align-items-center">
             <div>
-              <p>
+              <div class="sec_titles" data-aos="fade-up" data-aos-duration="1500">
+                <h3> After Care<span></span></h3>
+              </div>
+              <p data-aos="fade-up" data-aos-duration="1500">
                 After Care is the provision of care for all children, including children with special needs , after they have reached the age of 18 years, and are discharged from Children’s Home/Special Homes .It is to help prepare these young adults to sustain themselves during the transition from institutional to independent life.
               </p>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="2000">
                 The State Government is mandated by the Juvenile Justice (Care & Protection of Children) Act, 2000 vide section 44 to set up an aftercare programme for care of juvenile or Children after they leave Special Home or Children’s Home to facilitate their transition from an institution-based life to mainstream society.
               </p>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 Nani Maria also includes After Care programmes to provide bridging services for transition of the child from institutional care to an independent/self-sufficient life. We are  committed to ensuring sustainable and holistic development of children and youth, by upholding their rights and looking after their well-being. We nurture them with care and prepare them for life, staying by their side through different phase of life-childhood, adolescence and adulthood, just as a family would. In whatever we do, we always put children first.
               </p>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-center justify-content-center">
-            <img src="./assets/images/TQYk3e.jpg" alt="certificate" class="img-fluid">
+            <img src="./assets/images/TQYk3e.png" alt="certificate" class="img-fluid w-100" data-aos="fade-up" data-aos-duration="1500">
           </div>
         </div>
       </div>
@@ -247,6 +251,10 @@
   <script src="./assets/js/owl.carousel.js"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
   <script src="./assets/js/main.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
