--- a/nani-maria-kinder-school.html
+++ b/nani-maria-kinder-school.html
@@ -18,6 +18,7 @@
     rel="stylesheet">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .top_header{
       background-color: rgba(0.4, 0.4, 0.5, 0.4);
@@ -91,12 +92,12 @@
         <div class="row">
           <div class="col-md-6">
             <div class="sec_titles">
-              <h3>Nani Maria Kinder Garten School, Roing ( NMKGS ) <span></span></h3>
+              <h3 data-aos="fade-up" data-aos-duration="1500">Nani Maria Kinder Garten School, Roing ( NMKGS ) <span></span></h3>
             </div>
-            <p>
+            <p data-aos="fade-up" data-aos-duration="2000">
                 Fulfilling the need for compulsory education for all children in the age group of 6-14 is empirical to the Government of India , which is directly mentioned via Article 45 of the constitution. Our Nani Maria Kinder Garten School are committed to promoting literacy, especially for the girl child. Several schemes and initiatives have been undertaken to improve the lives of deserving students through education which ensures that children of our society can have free access to quality education, which in turn decrease the illiteracy rates.
             </p>
-            <div class="mt-4">
+            <div class="mt-4" data-aos="fade-up" data-aos-duration="3000">
               <h5>
                 Contact Us 
                </h5>
@@ -110,7 +111,7 @@
              </div>
           </div>
           <div class="col-md-6 offset-md-6">
-            <p>
+            <p data-aos="fade-up" data-aos-duration="3000">
                 The idea is to build a strong foundation in Language and social skills in a safe, secure and happy learning environment. Even after kids start school, they continue to support them through those years until they become employable
             </p>
           </div>
@@ -121,10 +122,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 mt-md-5 mt-0">
-            <img src="./assets/images/FS0l78.jpg" alt="founder" class="img-fluid w-100">
+            <img src="./assets/images/FS0l78.jpg" data-aos="fade-up" data-aos-duration="3000" alt="founder" class="img-fluid w-100">
           </div>
           <div class="col-md-6 d-flex align-items-center mt-md-0 mt-3">
-            <div>
+            <div data-aos="fade-up" data-aos-duration="3000">
               
               <div>
                 <p>
@@ -142,12 +143,12 @@ opportunities to succeed in Life.
           </div>
           
           <div class="col-md-6 d-flex align-items-center mt-5">
-            <div>
+            <div data-aos="fade-up" data-aos-duration="3000">
               <h4>Our School NMKGS was established in the year 2007-2008 as a primary School and extended to Middle school by now.</h4>
             </div>
           </div>
           <div class="col-md-6 mt-5">
-            <div class="img_shadow mt-5">
+            <div class="img_shadow mt-5" data-aos="fade-up" data-aos-duration="3000">
               <img src="./assets/images/eOZbns.jpg" alt="founder" class="w-100 img-fluid" >
             </div>
           </div>
@@ -158,12 +159,12 @@ opportunities to succeed in Life.
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
               <h3>Classification & Total no.of students <span></span></h3>
             </div>
           </div>
           <div class="col-md-12 mt-4">
-            <div class="table-responsive">
+            <div class="table-responsive" data-aos="fade-up" data-aos-duration="3000">
                 <table class="table table-striped">
                     <thead class="school_table_head">
                         <tr>
@@ -338,6 +339,10 @@ opportunities to succeed in Life.
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="./assets/js/index.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
