--- a/one_stop_centre.html
+++ b/one_stop_centre.html
@@ -24,6 +24,7 @@
     rel="stylesheet">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .top_header {
       background-color: rgba(0.4, 0.4, 0.5, 0.4);
@@ -117,24 +118,24 @@
         <div class="row">
           <div class="col-md-6 d-flex align-items-center">
             <div>
-              <div class="sec_titles">
+              <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                 <h3> One Stop Centre ( OSC ) <span></span></h3>
               </div>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 Ministry of women and Child Development (MWCD) has formulated a centrally Sponsored Scheme for setting up One stop Center, a sub-scheme under the umbrella scheme for National Mission for Empowerment of women including India Across Gandhi Mattritav Sahyaog Yojana across the country.
-              </p>
+              </p data-aos="fade-up" data-aos-duration="3000">
               <p>
                 Nani Maria Society also Includes One Stop-Center to provide the necessary support to women facing physical, sexual, emotional, psychological and economic abuse where they are facilitated and support and redressal irrespective of age, class, caste, education status, marital status, race and culture.
               </p>
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/images/zQWEPn.jpg" alt="certificate" class="img-fluid">
+            <img src="./assets/images/zQWEPn.jpg" alt="certificate" class="img-fluid" data-aos="fade-up" data-aos-duration="3000">
              <div class="mt-4">
-              <h5>
+              <h5 data-aos="fade-up" data-aos-duration="3000">
                 Contact Us 
                </h5>
-               <a href="tel:+9199166 31148" class="contactLink">
+               <a href="tel:+9199166 31148" class="contactLink" data-aos="fade-up" data-aos-duration="3000">
                  <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                   <span class="contactIcon d-inline-flex justify-content-center align-items-center">
                     <i class="fa fa-phone"></i>
@@ -150,10 +151,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 mt-4">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
                 <h3>Details of Inmates <span></span></h3>
             </div>
-            <div class="table-responsive">
+            <div class="table-responsive" data-aos="fade-up" data-aos-duration="3000">
               <table class="table table-striped">
                 <thead class="school_table_head">
                   <tr>
@@ -207,11 +208,11 @@
           </div>
           <div class="col-md-6 d-flex align-items-center">
             <div> 
-            <div class="sec_titles mb-5">
+            <div class="sec_titles mb-5" data-aos="fade-up" data-aos-duration="3000">
                 <h3>Details on our Sakhi - OSC Roing, Lower Dibang Valley District <span></span></h3>
             </div>
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-5" data-aos="fade-up" data-aos-duration="3000">
                     <h5>
                         Date of Operation 
                     </h5>
@@ -234,7 +235,7 @@
                     </p>
                 </div>
                 <div class="col-md-12">
-                    <p>
+                    <p data-aos="fade-up" data-aos-duration="3000">
                         MOU signed between Department of Women And Child Roing, Lower Dibang Valley District, Government of Arunachal Pradesh and The Nani Maria Society, Cheta Roing on 13th November 2020.
                     </p>
                 </div>
@@ -250,35 +251,35 @@
           <div class="col-md-12 d-flex align-items-center">
             <div>
               <div class="col-md-12 text-center">
-                <p>
+                <p data-aos="fade-up" data-aos-duration="3000">
                     To create awareness about the laws available for women and children and the mechanism to support their cause, the our OSC team organized several awareness campaign including Sarkar Aapke Dwar at various market area, villages, schools, NGOs etc and released posters educating the women and girls about various Laws and their Rights.
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card_edu">
+            <div class="card_edu" data-aos="fade-up" data-aos-duration="3000">
               <div class="cardImg">
                 <img src="./assets/images/m9GyaB.jpg" alt="img" class="img-fluid">
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card_edu">
+            <div class="card_edu" data-aos="fade-up" data-aos-duration="3000">
               <div class="cardImg">
                 <img src="./assets/images/hmh6B8.jpg" alt="img" class="img-fluid">
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card_edu">
+            <div class="card_edu" data-aos="fade-up" data-aos-duration="3000">
               <div class="cardImg">
                 <img src="./assets/images/kVrH6a.jpg" alt="img" class="img-fluid">
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card_edu">
+            <div class="card_edu" data-aos="fade-up" data-aos-duration="3000">
               <div class="cardImg">
                 <img src="./assets/images/vNPd4g.jpg" alt="img" class="img-fluid">
               </div>
@@ -408,6 +409,10 @@
   <script src="./assets/js/owl.carousel.js"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
   <script src="./assets/js/main.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
