--- a/Children-Care-Institute.html
+++ b/Children-Care-Institute.html
@@ -24,6 +24,7 @@
     rel="stylesheet">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     .top_header {
       background-color: rgba(0.4, 0.4, 0.5, 0.4);
@@ -117,17 +118,17 @@
         <div class="row">
           <div class="col-md-6 d-flex align-items-center">
             <div>
-              <div class="sec_titles">
+              <div class="sec_titles" data-aos="fade-up" data-aos-duration="1500">
                 <h3> Children Care Institute ( CCI ) with 10 Special Units <span></span></h3>
               </div>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="2000">
                 A child care Institution as defined under the JJ Act, 2015, means Children Home,
                 Open shelter, Observation Home, Special Home, Place of safety, Specialised
                 Adoption Agency and a fit Facility recognised under the Act for providing care
                 and protection to children, who are in need of such
                 Services.
               </p>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="2500">
                 Nani Maria Children’s Home (Child Care Institute)with total intake
                 capacity of 50 children is registered under Sub-section (3) of Section 34 of the
                 Juvenile Justice (Care And Protection of Children)Act 2000 (act no. 56
@@ -135,16 +136,16 @@
                 of Children Home Rules, 2010. Nani Maria society has been providing shelter to these needy children
                 since NMS’s existence, however it was officially registered as Children Home in the year 2015
               </p>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 The Child Care Institute (CCI) is one of the branches of
                 Integrated Child Protection Scheme (ICPS) under the Ministry of
                 Women and Child development, Government of India.
               </p>
               <div class="mt-4">
-                <h5>
+                <h5 data-aos="fade-up" data-aos-duration="1500">
                   Contact Us 
                  </h5>
-                 <a href="tel:+9160090 54245" class="contactLink">
+                 <a href="tel:+9160090 54245" class="contactLink" data-aos="fade-up" data-aos-duration="1500">
                    <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                     <span class="contactIcon d-inline-flex justify-content-center align-items-center">
                       <i class="fa fa-phone"></i>
@@ -155,7 +156,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/images/jjPSVM.jpg" alt="certificate" class="img-fluid">
+            <img src="./assets/images/jjPSVM.jpg" alt="certificate" class="img-fluid" data-aos="fade-up" data-aos-duration="1500">
           </div>
         </div>
       </div>
@@ -165,16 +166,16 @@
         <div class="row">
           <div class="row">
             <div class="col-md-12 mb-4">
-              <img src="./assets//images/1PN7aL.jpg" class="w-100" alt="img">
+              <img src="./assets//images/1PN7aL.jpg" class="w-100" alt="img" data-aos="fade-up" data-aos-duration="3000">
             </div>
           </div>
           <div class="col-md-12 text-center">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="3000">
               <h3>Details are <span></span></h3>
             </div>
           </div>
           <div class="col-md-12 mt-4">
-            <div class="table-responsive">
+            <div class="table-responsive" data-aos="fade-up" data-aos-duration="3000">
               <table class="table table-striped">
                 <thead class="school_table_head">
                   <tr>
@@ -271,10 +272,10 @@
         </div>
         <div class="row">
           <div class="col-md-7 mx-auto pt-5">
-            <img src="./assets/images/g48.jpeg" alt="img" class="w-100">
+            <img src="./assets/images/g48.jpeg" alt="img" class="w-100" data-aos="fade-up" data-aos-duration="1500">
           </div>
           <div class="col-md-12 text-center mt-5">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="1500">
               <h3>Details of cases registered in Nani Maria Children’s Home <span></span></h3>
             </div>
           </div>
@@ -283,7 +284,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12 mt-4">
-            <div class="table-responsive school_table-responsive">
+            <div class="table-responsive school_table-responsive" data-aos="fade-up" data-aos-duration="1500">
               <table class="table table-striped table-bordered ">
                 <thead class="school_table_head school_table_head-home">
                   <tr class="school_table_head-homeOne">
@@ -701,7 +702,7 @@
           <div class="col-md-12 d-flex align-items-center">
             <div>
               <div class="col-md-12 text-center">
-                <p>
+                <p data-aos="fade-up" data-aos-duration="2000">
                   Meanwhile, during stay at the Home we provide them Formal Education, Vocational Training like Weaving,
                   Cutting, Tailoring & embroidery and they are acquainted on life skills besides cultural activities.
                 </p>
@@ -709,42 +710,42 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card_edu">
-              <div class="cardImg">
+            <div class="card_edu" data-aos="fade-up" data-aos-duration="3000">
+              <div class="cardImg" >
                 <img src="./assets/images/mGws7i.png" alt="img" class="img-fluid">
               </div>
               <div class="card_edu_content">
-                <h5>Weaving Wrap-Skirt</h5>
+                <h5 data-aos="fade-up" data-aos-duration="3000">Weaving Wrap-Skirt</h5>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card_edu">
+            <div class="card_edu" data-aos="fade-up" data-aos-duration="3000">
               <div class="cardImg">
                 <img src="./assets/images/tIZLQQ.jpg" alt="img" class="img-fluid">
               </div>
               <div class="card_edu_content">
-                <h5>Making Bamboo Stool</h5>
+                <h5 data-aos="fade-up" data-aos-duration="3000">Making Bamboo Stool</h5>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card_edu">
+            <div class="card_edu" data-aos="fade-up" data-aos-duration="3000">
               <div class="cardImg">
                 <img src="./assets/images/h7DU0n.jpg" alt="img" class="img-fluid">
               </div>
               <div class="card_edu_content">
-                <h5>Handmade Decor Items</h5>
+                <h5 data-aos="fade-up" data-aos-duration="3000">Handmade Decor Items</h5>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card_edu">
+            <div class="card_edu" data-aos="fade-up" data-aos-duration="3000">
               <div class="cardImg">
                 <img src="./assets/images/KvdkEZ.png" alt="img" class="img-fluid">
               </div>
               <div class="card_edu_content">
-                <h5>Studying</h5>
+                <h5 data-aos="fade-up" data-aos-duration="3000">Studying</h5>
               </div>
             </div>
           </div>
@@ -872,6 +873,10 @@
   <script src="./assets/js/owl.carousel.js"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
   <script src="./assets/js/main.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
