--- a/donate.html
+++ b/donate.html
@@ -24,6 +24,7 @@
   <!-- font awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
  <style>
      .top_header {
@@ -97,8 +98,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-white">Donate Now</h3>
-                    <h1>Be The Reason For a Smile</h1>
+                    <h3 class="text-white" data-aos="fade-up" data-aos-duration="1500">Donate Now</h3>
+                    <h1 data-aos="fade-up" data-aos-duration="2000">Be The Reason For a Smile</h1>
                 </div>
             </div>
         </div>
@@ -107,7 +108,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7 mx-auto">
-                    <div class="details_box">
+                    <div class="details_box" data-aos="fade-up" data-aos-duration="3000">
                         <div class="row">
                             <div class="col-md-12 mb-4">
                                 <h2 class="mb-3">
@@ -298,6 +299,10 @@
   <script>
      baguetteBox.run('.tz-gallery');
   </script>
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script>
+     AOS.init();
+   </script>
 </body>
 
 </html>
