--- a/index.html
+++ b/index.html
@@ -744,6 +744,10 @@
   <script>
     AOS.init();
   </script>
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+   <script>
+     AOS.init();
+   </script>
 </body>
 
 </html>
