--- a/donate.html
+++ b/donate.html
@@ -86,7 +86,7 @@
               <a class="nav-link" href="./contact-us.html">Contact</a>
             </li>
             <li class="nav-item active">
-              <a class="btn nav-link navBtn" href="./donate.html">Donate</a>
+              <a class="btn nav-link navBtn" href="./donate.html">Donate <img src="./assets/images/box.png" alt="box" class="donate_img"></a>
             </li>
           </ul>
         </div>
@@ -107,8 +107,13 @@
     <section class='py-5'>
         <div class="container">
             <div class="row">
-                <div class="col-md-7 mx-auto">
-                    <div class="details_box" data-aos="fade-up" data-aos-duration="3000">
+              <div class="col-md-6 d-flex align-items-center order-md-1 order-2 mt-md-0 mt-3">
+                <div class="imgBox2" data-aos="fade-right" data-aos-duration="3000">
+                  <img src="./assets/images/g12.jpg" alt="img" class="w-100">
+                </div>
+              </div>
+                <div class="col-md-6 mx-auto order-md-2 order-1">
+                    <div class="details_box" data-aos="fade-left" data-aos-duration="3000">
                         <div class="row">
                             <div class="col-md-12 mb-4">
                                 <h2 class="mb-3">
