--- a/nani-maria-kinder-school.html
+++ b/nani-maria-kinder-school.html
@@ -77,7 +77,7 @@
               <a class="nav-link" href="./contact-us.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="btn nav-link navBtn" href="./donate.html">Donate</a>
+              <a class="btn nav-link navBtn" href="./donate.html">Donate <img src="./assets/images/box.png" alt="box" class="donate_img"></a>
             </li>
           </ul>
         </div>
